# ledborg-server

./: .gitignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in~  config.status  configure  configure.ac  ledborg-server-0.1.0.tar.bz2  ledborg-server-0.2.0.tar.bz2  ledborg-server-0.2.4.tar.bz2  libtool  libtoolT
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: index.html
doc/gio-2.0/: GLib.Action.activate.html  GLib.Action.change_state.html  GLib.Action.enabled.html  GLib.Action.get_enabled.html  GLib.Action.get_name.html  GLib.Action.get_parameter_type.html  GLib.Action.get_state.html  GLib.Action.get_state_hint.html  GLib.Action.get_state_type.html  GLib.Action.html  GLib.Action.name.html  GLib.Action.parameter_type.html  GLib.Action.state.html  GLib.Action.state_type.html  GLib.ActionEntry.activate.html  GLib.ActionEntry.change_state.html  GLib.ActionEntry.html  GLib.ActionEntry.name.html  GLib.ActionEntry.parameter_type.html  GLib.ActionEntry.state.html  GLib.ActionGroup.action_added.html  GLib.ActionGroup.action_enabled_changed.html  GLib.ActionGroup.action_removed.html  GLib.ActionGroup.action_state_changed.html  GLib.ActionGroup.activate_action.html  GLib.ActionGroup.change_action_state.html  GLib.ActionGroup.get_action_enabled.html  GLib.ActionGroup.get_action_parameter_type.html  GLib.ActionGroup.get_action_state.html  GLib.ActionGroup.get_action_state_hint.html  GLib.ActionGroup.get_action_state_type.html  GLib.ActionGroup.has_action.html  GLib.ActionGroup.html  GLib.ActionGroup.list_actions.html  GLib.ActionGroup.query_action.html  GLib.ActionMap.add_action.html  GLib.ActionMap.add_action_entries.html  GLib.ActionMap.html  GLib.ActionMap.lookup_action.html  GLib.ActionMap.remove_action.html  (+2458 more)
doc/glib-2.0/: GLib.Array.Array.html  GLib.Array.Array.sized.html  GLib.Array.append_val.html  GLib.Array.append_vals.html  GLib.Array.html  GLib.Array.index.html  GLib.Array.insert_val.html  GLib.Array.insert_vals.html  GLib.Array.length.html  GLib.Array.prepend_val.html  GLib.Array.prepend_vals.html  GLib.Array.remove_index.html  GLib.Array.remove_index_fast.html  GLib.Array.remove_range.html  GLib.Array.set_size.html  GLib.Array.sort.html  GLib.Array.sort_with_data.html  GLib.AsyncQueue.AsyncQueue.html  GLib.AsyncQueue.html  GLib.AsyncQueue.length.html  GLib.AsyncQueue.length_unlocked.html  GLib.AsyncQueue.lock.html  GLib.AsyncQueue.pop.html  GLib.AsyncQueue.pop_unlocked.html  GLib.AsyncQueue.push.html  GLib.AsyncQueue.push_sorted.html  GLib.AsyncQueue.push_sorted_unlocked.html  GLib.AsyncQueue.push_unlocked.html  GLib.AsyncQueue.ref_unlocked.html  GLib.AsyncQueue.sort.html  GLib.AsyncQueue.sort_unlocked.html  GLib.AsyncQueue.timed_pop.html  GLib.AsyncQueue.timed_pop_unlocked.html  GLib.AsyncQueue.try_pop.html  GLib.AsyncQueue.try_pop_unlocked.html  GLib.AsyncQueue.unlock.html  GLib.AsyncQueue.unref_and_unlock.html  GLib.AtomicInt.add.html  GLib.AtomicInt.compare_and_exchange.html  GLib.AtomicInt.dec_and_test.html  (+2646 more)
doc/gobject-2.0/: GLib.Binding.flags.html  GLib.Binding.html  GLib.Binding.source.html  GLib.Binding.source_property.html  GLib.Binding.target.html  GLib.Binding.target_property.html  GLib.BindingFlags.BIDIRECTIONAL.html  GLib.BindingFlags.DEFAULT.html  GLib.BindingFlags.INVERT_BOOLEAN.html  GLib.BindingFlags.SYNC_CREATE.html  GLib.BindingFlags.html  GLib.BindingTransformFunc.html  GLib.Callback.html  GLib.Closure.Closure.html  GLib.Closure.SIZE.html  GLib.Closure.add_finalize_notifier.html  GLib.Closure.add_invalidate_notifier.html  GLib.Closure.add_marshal_guards.html  GLib.Closure.html  GLib.Closure.invalidate.html  GLib.Closure.invoke.html  GLib.Closure.remove_finalize_notifier.html  GLib.Closure.remove_invalidate_notifier.html  GLib.Closure.set_marshal.html  GLib.Closure.set_meta_marshal.html  GLib.Closure.sink.html  GLib.ClosureMarshal.html  GLib.ClosureNotify.html  GLib.ConnectFlags.AFTER.html  GLib.ConnectFlags.SWAPPED.html  GLib.ConnectFlags.html  GLib.EnumClass.get_value.html  GLib.EnumClass.get_value_by_name.html  GLib.EnumClass.get_value_by_nick.html  GLib.EnumClass.html  GLib.EnumClass.maximum.html  GLib.EnumClass.minimum.html  GLib.EnumClass.n_values.html  GLib.EnumClass.values.html  GLib.EnumValue.html  (+369 more)
doc/libledborg/: IOError.COMMUNICATION_BREAKDOWN.html  IOError.FILE_NOT_FOUND.html  IOError.GENERAL.html  IOError.html  LedBorg.Colour.Colour.with_rgb.html  LedBorg.Colour.blue.html  LedBorg.Colour.get_html_value.html  LedBorg.Colour.get_ledborg_value.html  LedBorg.Colour.green.html  LedBorg.Colour.html  LedBorg.Colour.red.html  LedBorg.Colour.to_string.html  LedBorg.LedBorgClient.LedBorgClient.html  LedBorg.LedBorgClient.html  index.htm  (+8 more)
po/: Makefile  Makefile.in  Makefile.in.u1conflict
src/: Colour.c  Colour.vala  Device.c  Device.vala  IOError.vala  LedBorgServer.c  LedBorgServer.vala  Makefile  Makefile.am  Makefile.in  Makefile.u1conflict  RequestError.vala  Responder.c  Responder.vala  ledborg_server  main.c  main.vala
src/.deps/: Colour.Po  Device.Po  IOError.Po  LedBorgServer.Po  LedBorgSimpleServer.Po  RequestError.Po  Responder.Po  main.Po
src/applet/: Colour.c  IOError.c  LedBorgClient.c  LedBorgClient.vala  LedBorgControlApplet.c  LedBorgControlApplet.vala  Makefile  Makefile.am  Makefile.in  Makefile.u1conflict  RequestError.c  ledborg_control_applet  main.c  main.vala
src/applet/.deps/: Colour.Po  IOError.Po  LedBorgClient.Po  LedBorgControlApplet.Po  RequestError.Po  main.Po
src/conf/: ledborg-server.html
src/ledborg-server/: ledborg-server.html
src/lib/: Colour.lo  Colour.vala  IOError.lo  LedBorgClient.c  LedBorgClient.lo  LedBorgClient.vala  Makefile  Makefile.am  Makefile.in  RequestError.c  RequestError.lo  RequestError.vala  libledborg.h  libledborg.la  libledborg.pc.in  libledborg.vapi
src/lib/.deps/: Colour.Plo  Colour.Po  IOError.Plo  IOError.Po  LedBorgClient.Plo  RequestError.Plo  RequestError.Po
src/lib/.libs/: libledborg.la  libledborg.lai  libledborg.so.0.0.1
vapi/: Config.vapi
(+917 files in other folders)
